--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/jasperket/odin-restaurant/issues"
   },
-  "homepage": "https://github.com/jasperket/odin-restaurant#readme"
+  "homepage": "https://github.com/jasperket/odin-restaurant#readme",
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
